'assets/htmlTags' + add HTML tags to body

--- a/assets/htmlTags/file.html
+++ b/assets/htmlTags/file.html
@@ -27,5 +27,129 @@
 </head>
 <!-- body || the head document declares the start of the document content. this tag contains more html tags that should be displayed on the site || essential -->
 <body>
+          <!-- COMMON HTML -->
+          <a href="https://example.com">link</a>
+          <abbr title=""></abbr>
+          <address>
+          <area>
+          <article>
+          <aside>
+          <audio>
+          <b>
+          <base>
+          <bdi>
+          <bdo>
+          <blockquote>
+          <body>
+          <br>
+          <button>
+          <canvas>
+          <caption>
+          <cite>
+          <code>
+          <col>
+          <colgroup>
+          <data>
+          <datalist>
+          <dd>
+          <del>
+          <details>
+          <dfn>
+          <dialog>
+          <div>
+          <dl>
+          <dt>
+          <em>
+          <embed>
+          <fieldset>
+          <figcaption>
+          <figure>
+          <footer>
+          <form>
+          <h1>
+          <h2>
+          <h3>
+          <h4>
+          <h5>
+          <h6>
+          <head>
+          <header>
+          <hr>
+          <html>
+          <i>
+          <iframe>
+          <img>
+          <input>
+          <ins>
+          <kbd>
+          <label>
+          <legend>
+          <li>
+          <link>
+          <main>
+          <map>
+          <mark>
+          <meta>
+          <meter>
+          <nav>
+          <noscript>
+          <object>
+          <ol>
+          <optgroup>
+          <option>
+          <output>
+          <p>
+          <param>
+          <picture>
+          <pre>
+          <progress>
+          <q>
+          <rp>
+          <rt>
+          <ruby>
+          <s>
+          <samp>
+          <script>
+          <section></section>
+          <select>
+          <small>
+          <source>
+          <span>
+          <strike>
+          <strong>
+          <style>
+          <sub>
+          <summary>
+          <sup>
+          <svg>
+          <table>
+          <tbody>
+          <td>
+          <template>
+          <textarea>
+          <tfoot>
+          <th>
+          <thead>
+          <time>
+          <title>
+          <tr>
+          <track>
+          <tt>
+          <u>
+          <ul>
+          <var>
+          <video>
+          <wbr>
+          <!-- NOT IN HTML5 (USE CSS) -->
+          <acronym></acronym>
+          <applet></applet>
+          <basefont>
+          <big></big>
+          <center></center>
+          <dir></dir>
+          <font></font>
+          <frame>
+          <frameset>
+          <noframes>
 </body>
 </html>
